--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>副専攻実践プロジェクト実験用</title>
+    <title>2225117-ミニプロ最終版</title>
     <style>
         #mo1 {
             position: absolute;
@@ -35,22 +35,13 @@
         }
 
         #aso {
-            top: 860px;
-            left: 20px;
+            display:block;
+            top: 1000px;
+            left: 500px;
             border: 5px solid green;
             position: absolute;
         }
 
-        #kakusi {
-            top: 105px;
-            left: 20px;
-            width: 1280px;
-            height: 720px;
-            border: 10px solid black;
-            position: absolute;
-            cursor: none;
-            margin: 0 auto;
-        }
 
         #sta {
             position: fixed;
@@ -72,10 +63,9 @@
 
         canvas {
             top: 105px;
-            left: 20px;
+            left: 500px;
             border: 10px solid blue;
             position: absolute;
-            cursor: none;
             padding: 0px;
             z-index: 2;
             margin: 0 auto;
@@ -121,7 +111,7 @@
             display: inline-block;
             position: absolute;
             top: 50px;
-            left: 20px;
+            left: 200px;
         }
 
         #se1 {
@@ -218,34 +208,33 @@
 </head>
 
 <body>
-    <h1>以下の問題を回答せよ</h1>
-    <div id="lt0"><button id="lt1">30秒</button>
-        <button id="lt2">60秒</button>
-        <button id="lt3">7分</button>
-        <button id="lt4">120秒</button>
+    <h1>実験へのご協力ありがとうございます</h1>
+    <div id="lt0"><button id="lt1">被験者1</button>
+        <button id="lt2">被験者2</button>
+        <button id="lt3">被験者3</button>
+        <button id="lt4">被験者4</button>
         <button id="rise">リセット</button>
     </div>
     <button id="start" onclick="gamestart">スタート！</button>
     <div id="mozi">
-        <p id="r1">実験への参加ありがとうございます。上のボタンを押せばスタートボタンが出てきます。スタートを押した時点から開始です</p>
+        <p id="r1"></p>
         <p id="r2"></p>
         <p id="r3"></p>
         <p id="r4"></p>
         <p id="timer"></p>
     </div>
     <div id="kakusi"></div>
-    <div id="sta"><img id="im1" src="nc91679.png"></div>
-    <div id="bakuhadiv"><img src="bakuha.png" id="bakuha"></div>
-    <canvas id="can" width="1280" height="720"></canvas>
-    <div id="aso">
+
+    <canvas id="can" width="965" height="880"></canvas>
+    <div id="aso" >
         <table>
             <tr>
                 <div id="senntakusi0">
-                    <td><button id="se1">①</button></td>
-                    <td><button id="se2">②</button></td>
-                    <td><button id="se3">③</button></td>
-                    <td><button id="se4">④</button></td>
-                    <td><button id="se5">⑤</button></td>
+                    <td><button id="se1">A</button></td>
+                    <td><button id="se2">B</button></td>
+                    <td><button id="se3">C</button></td>
+                    <td><button id="se4">D</button></td>
+                    <td><button id="se5">E</button></td>
                     <td><button id="down">ダウンロード</button></td>
 
                 </div>
@@ -256,12 +245,14 @@
     <script>
         let zi = 1;
         let zi2 = 2;
-
+        let m1 =965;
+        let m2 =880;
         let d1 = 900;
-        let limitTime = [30000, 60000, 420000, 120000];
+        let limitTime = [420000, 420000, 420000, 420000];
         let lt = 0;
         let count1 = 30;
         let pos = { x: 0, y: 0 };
+
         // CSVファイルを取得
         let csv = new XMLHttpRequest();
 
@@ -300,23 +291,59 @@
         }
 
 
-        document.getElementById("sta").style.opacity = 1;
+
 
         document.getElementById("lt1").onclick = function () {
-            lt = 0;
-            count1 = 30;
+            lt = 2;
+            count1 = 420;
             document.getElementById("start").style.display = "block";
             console.log(lt);
             console.log(limitTime[lt]);
         }
         document.getElementById("lt2").onclick = function () {
-            lt = 1;
-            count1 = 60;
+           hairetu = [];
+            let csv = new XMLHttpRequest();
+            // CSVファイルへのパス
+        csv.open("GET", "./Book2.csv", false);
+         hairetu = [];
+        // csvファイル読み込み失敗時のエラー対応
+        csv.send(null);
+        console.log(csv.status);
+        // 改行ごとに配列化
+        let lines = csv.responseText.split(/\r\n|\n/);
+        console.log(lines);
+        // 1行ごとに処理
+        for (let i = 0; i < lines.length; ++i) {
+            let cells = lines[i].split(",");
+            if (cells.length != 1) {
+                hairetu.push(cells);
+            }
+        }
+            lt = 2;
+            count1 = 420;
             document.getElementById("start").style.display = "block";
             console.log(lt);
             console.log(limitTime[lt]);
         }
         document.getElementById("lt3").onclick = function () {
+            hairetu = [];
+            let csv = new XMLHttpRequest();
+            // CSVファイルへのパス
+        csv.open("GET", "./Book3.csv", false);
+         hairetu = [];
+        // csvファイル読み込み失敗時のエラー対応
+        csv.send(null);
+        console.log(csv.status);
+        // 改行ごとに配列化
+        let lines = csv.responseText.split(/\r\n|\n/);
+        console.log(lines);
+        // 1行ごとに処理
+        for (let i = 0; i < lines.length; ++i) {
+            let cells = lines[i].split(",");
+            if (cells.length != 1) {
+                hairetu.push(cells);
+            }
+        }
             lt = 2;
             count1 = 420;
             document.getElementById("start").style.display = "block";
@@ -324,8 +351,26 @@
             console.log(limitTime[lt]);
         }
         document.getElementById("lt4").onclick = function () {
-            lt = 3;
-            count1 = 120;
+            hairetu = [];
+            let csv = new XMLHttpRequest();
+            // CSVファイルへのパス
+        csv.open("GET", "./Book4.csv", false);
+         hairetu = [];
+        // csvファイル読み込み失敗時のエラー対応
+        csv.send(null);
+        console.log(csv.status);
+        // 改行ごとに配列化
+        let lines = csv.responseText.split(/\r\n|\n/);
+        console.log(lines);
+        // 1行ごとに処理
+        for (let i = 0; i < lines.length; ++i) {
+            let cells = lines[i].split(",");
+            if (cells.length != 1) {
+                hairetu.push(cells);
+            }
+        }
+            lt = 2;
+            count1 = 420;
             document.getElementById("start").style.display = "block";
             console.log(lt);
             console.log(limitTime[lt]);
@@ -343,7 +388,7 @@
             img.src = hairetu[mondai][0];
             mondai++;
             img.onload = function () {
-                ctx.drawImage(img, 0, 0, 1280, 720);
+                ctx.drawImage(img, 0, 0, m1, m2);
                 // 年月日等の各要素を取得;
                 var date = new Date();
                 var y = date.getFullYear();
@@ -371,7 +416,6 @@
                     count1--;
                 } else {
                     timer.textContent = "タイムアップ！";
-                    r1.textContent = "ご協力ありがとうございました！アンケートにご協力いただければ幸いです。";
                     clearInterval(countDownTimer);
                 }
             }
@@ -389,7 +433,7 @@
             console.log("owata");
             canvas = document.getElementById("can");
             ctx = canvas.getContext("2d");
-            ctx.clearRect(0, 0, 1280, 720);
+            ctx.clearRect(0, 0, m1, m2);
             let text = "テスト終了";
             let fontSize = 50;
             ctx.font = "75px Arial";
@@ -399,13 +443,12 @@
             timerId = setTimeout(saisyoukyo, 1000);
             r1.textContent = "ご協力ありがとうございました！アンケートにご協力いただければ幸いです。";
             function saisyoukyo() {
-                ctx.clearRect(0, 0, 1280, 720);
+                ctx.clearRect(0, 0, m1, m2);
                 let text = "テスト終了";
                 let fontSize = 50;
                 ctx.font = "75px Arial";
                 let textWidth = ctx.measureText(text).width;
                 ctx.fillText(text, (1280 - textWidth) / 2, 420);
-                document.getElementById("kakusi").style.zIndex = 1;
                 document.getElementById("lt1").style.pointerEvents = "auto";
                 document.getElementById("lt2").style.pointerEvents = "auto";
                 document.getElementById("lt3").style.pointerEvents = "auto";
@@ -438,12 +481,12 @@
             console.log(kaitoukanren);
             count1 = 30;
             console.log(mondai);
-            ctx.clearRect(0, 0, 1280, 720);
+            ctx.clearRect(0, 0, m1, m2);
             var img = new Image();
             img.src = hairetu[mondai][0];
             mondai++;
             img.onload = function () {
-                ctx.drawImage(img, 0, 0, 1280, 720);
+                ctx.drawImage(img, 0, 0, m1, m2);
                 var date = new Date();
                 // 年月日等の各要素を取得
                 var y = date.getFullYear();
@@ -481,12 +524,12 @@
             console.log(hairetu[mondai - 1][1]);
             count1 = 30;
             console.log(mondai);
-            ctx.clearRect(0, 0, 1280, 720);
+            ctx.clearRect(0, 0, m1, m2);
             var img = new Image();
             img.src = hairetu[mondai][0];
             mondai++;
             img.onload = function () {
-                ctx.drawImage(img, 0, 0, 1280, 720);
+                ctx.drawImage(img, 0, 0, m1, m2);
                 var date = new Date();
                 // 年月日等の各要素を取得
                 var y = date.getFullYear();
@@ -524,12 +567,12 @@
             console.log(hairetu[mondai - 1][1]);
             count1 = 30;
             console.log(mondai);
-            ctx.clearRect(0, 0, 1280, 720);
+            ctx.clearRect(0, 0, m1, m2);
             var img = new Image();
             img.src = hairetu[mondai][0];
             mondai++;
             img.onload = function () {
-                ctx.drawImage(img, 0, 0, 1280, 720);
+                ctx.drawImage(img, 0, 0, m1, m2);
                 var date = new Date();
                 // 年月日等の各要素を取得
                 var y = date.getFullYear();
@@ -566,12 +609,12 @@
             console.log(hairetu[mondai - 1][1]);
             count1 = 30;
             console.log(mondai);
-            ctx.clearRect(0, 0, 1280, 720);
+            ctx.clearRect(0, 0, m1, m2);
             var img = new Image();
             img.src = hairetu[mondai][0];
             mondai++;
             img.onload = function () {
-                ctx.drawImage(img, 0, 0, 1280, 720);
+                ctx.drawImage(img, 0, 0, m1, m2);
                 var date = new Date();
                 // 年月日等の各要素を取得
                 var y = date.getFullYear();
@@ -608,12 +651,12 @@
             console.log(hairetu[mondai - 1][1]);
             count1 = 30;
             console.log(mondai);
-            ctx.clearRect(0, 0, 1280, 720);
+            ctx.clearRect(0, 0, m1, m2);
             var img = new Image();
             img.src = hairetu[mondai][0];
             mondai++;
             img.onload = function () {
-                ctx.drawImage(img, 0, 0, 1280, 720);
+                ctx.drawImage(img, 0, 0, m1, m2);
                 var date = new Date();
                 // 年月日等の各要素を取得
                 var y = date.getFullYear();
